--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Modern - Dictionary</title>
 </head>
 <body>
-  <div>
+  <div class="wrapper">
     <header>
       <nav>
         <div><img id="logo" src="./assets/images/logo.svg" alt="an icon of a dictionary"></div>
@@ -22,73 +22,79 @@
             <span class="arrow"><img src="./assets/images/icon-arrow-down.svg" alt="an icon of an arrow"></span>    
           </div>
           <div id="pipe"></div>
-          <div>
-            <div></div>
-            <div><img src="./assets/images/icon-moon.svg" alt="an icon of a sun"></div>
-          </div>
+          <div class="theme-wrapper">
+          <label class="slider">
+            <input type="checkbox" id="theme-toggle" />
+            <span class="slider-thumb"></span>
+          </label>
+          <div><img id="theme-icon" src="./assets/images/icon-moon.svg" alt="an icon of a moon"></div>
+        </div>
         </div>
       </nav>
     </header>
+  
+
+    <main>
+      <section id="search">
+        <input type="text" placeholder="Search for a word..." id="search-input">
+        <img src="./assets/images/icon-search.svg" alt="an icon of a search">
+      </section>
+
+      <section>
+        <!-- key words -->
+        <div class="key-words">
+          <div>
+            <h1>Keyboard</h1>
+            <p>/ˈkiːbɔːd/</p>
+          </div>
+          <div class="play-icon"><img src="./assets/images/icon-play.svg" alt=" an icon of a play"></div>
+        </div>
+
+        <!-- definitions -->
+        <div class="definition-container">
+          <div class="definition">
+            <h3>noun</h3>
+            <hr>
+          </div>
+          <div class="meaning">
+            <h4>Meaning</h4>
+            <ul class="meaning-list">
+              <li>(etc.) A set of keys used to operate a typewriter, computer etc.</li>
+              <li>A component of many instruments including the piano, organ, and harpsichord consisting of usually black and white keys that cause different tones to be produced when struck.</li>
+              <li>A device with keys of a musical keyboard, used to control electronic sound-producing devices which may be built into or separate from the keyboard device.</li>
+            </ul>
+          </div>
+          <div class="synonyms">
+            <h4>Synonyms</h4>
+            <span>electronic keyboard</span>
+          </div>
+        </div>
+        <div class="definition-container">
+          <div class="definition">
+            <h3>verb</h3>
+            <hr>
+          </div>
+          <div class="meaning">
+            <h4>Meaning</h4>
+            <ul class="meaning-list meaning-list-verb">
+              <li>(etc.) A set of keys used to operate a typewriter, computer etc.</li>
+              <p>“Keyboarding is the part of this job I hate the most.”</p>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <hr>
+      <div class="source">
+        <h5>Source</h5>
+        <p class="source-link"><a href="https://dictionaryapi.dev/" target="_blank">https://en.wiktionary.org/wiki/keyboard</a>
+          <img src="./assets/images/icon-new-window.svg" alt=" an icon of a new window">
+        </p>
+      </div>
+    </footer>
   </div>
-
-  <main>
-    <div id="search">
-      <input type="text" placeholder="Search for a word..." id="search-input">
-      <img src="./assets/images/icon-search.svg" alt="an icon of a search">
-    </div>
-
-    <section>
-      <!-- key words -->
-      <div>
-        <div>
-          <h1>Keyboard</h1>
-          <p>/ˈkiːbɔːd/</p>
-        </div>
-        <div><img src="./assets/images/icon-play.svg" alt=" an icon of a play"></div>
-      </div>
-
-      <!-- definitions -->
-      <div>
-        <div>
-          <h3>noun</h3>
-          <hr>
-        </div>
-        <div>
-          <p>Meaning</p>
-          <ul>
-            <li>(etc.) A set of keys used to operate a typewriter, computer etc.</li>
-            <li>A component of many instruments including the piano, organ, and harpsichord consisting of usually black and white keys that cause different tones to be produced when struck.</li>
-            <li>A device with keys of a musical keyboard, used to control electronic sound-producing devices which may be built into or separate from the keyboard device.</li>
-          </ul>
-        </div>
-        <div>
-          <p>Synonyms</p>
-          <span>electronic keyboard</span>
-        </div>
-      </div>
-      <div>
-        <div>
-          <h3>verb</h3>
-          <hr>
-        </div>
-        <div>
-          <p>Meaning</p>
-          <ul>
-            <li>(etc.) A set of keys used to operate a typewriter, computer etc.</li>
-            <p>“Keyboarding is the part of this job I hate the most.”</p>
-          </ul>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <hr>
-    <div>
-      <p>Source</p>
-      <p><a href="https://dictionaryapi.dev/" target="_blank">https://en.wiktionary.org/wiki/keyboard</a></p>
-    </div>
-  </footer>
   <script src="./js/main.js"></script>
 </body>
 </html>
