--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
               <option value="sans-serif">Sans Serif</option>
               <option value="serif">Serif</option>
               <option value="mono">Mono</option>
-              <option value="inter">Inter</option>
             </select>
             <span class="arrow"><img src="./assets/images/icon-arrow-down.svg" alt="an icon of an arrow"></span>    
           </div>
           <div id="pipe"></div>
           <div class="theme-wrapper">
-          <label class="slider">
+          <label class="slider switch">
             <input type="checkbox" id="theme-toggle" />
             <span class="slider-thumb"></span>
           </label>
